# screenwriter

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  specs.yml
icon/: screenwrtr.afdesign
scripts/: replace_keyboard_shortcuts_on_readme.js
spec/: farpoint.txt  screenplay.txt  titanic.txt
src/: App.js  App.jsx  App.scss  Base.scss  Dropzopne.js  Icons.scss  Pdf.scss  Print.scss  Story.scss  exporter.js  index.html  keyboardShortcuts.json  screenwriter.js  screenwriter.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Cover.js  Cover.scss  DocumentHistory.jsx  DocumentHistory.scss  Dropzone.js  Dropzone.jsx  Dropzone.scss  Dropzopne.js  Editor.js  Editor.jsx  Editor.scss  MetaDataEdit.js  MetaDataEdit.jsx  MetaDataEdit.scss  SceneSection.js  SceneSection.jsx  Settings.jsx  Settings.scss  StatusLog.jsx  StatusLog.scss  SuggestionBox.js  SuggestionBox.jsx  SuggestionBox.scss  Toc.js  Toc.jsx  Toc.scss  Toggle.jsx  Toggle.scss  Toolbar.js  Toolbar.jsx  Toolbar.scss  useVisibilityChange.jsx
src/icons/: Icons.scss  icons.scss
src/lib/: Demo.js  Exporter.js  Exporter.spec.js  HR.js  Importer.js  Importer.spec.js  JsonDiff.js  JsonDiff.spec.js  helper.js  helper.spec.js  mementos.js  tauri.js
